# nlp-challange-vectorizer

./: .gitignore  docker-compose.yaml  main.py  pyproject.toml
src/: config.py
src/ingest/: doc_processor.py  loader.py  vectorizer.py
src/storage/: chroma.py
