[project]
name = "nlp-vectorizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "docling>=2.68.0",
    "loguru>=0.7.3",
    "pillow>=11.3.0",
    "protobuf>=6.33.4",
    "pydantic-settings>=2.12.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.5",
]
